<resources>
    <string name="app_name">SendBird Sample</string>

    <!-- all -->
    <string name="all_app_version">Sample UI v%1$s / SDK v%2$s</string>

    <string name="all_create">Create</string>
    <string name="all_invite">Invite</string>

    <string name="all_group_channels">Group Channels</string>
    <string name="all_open_channels">Open Channels</string>

    <!-- main -->
    <string name="main_drawer_open">Open navigation drawer</string>
    <string name="main_drawer_close">Close navigation drawer</string>
    <string name="select_channel_type">Select channel type</string>
    <string name="settings">Settings</string>
    <string name="blocked_members_list">Blocked members</string>

    <string name="login">Login</string>
    <string name="login_disconnect">Disconnect</string>
    <string name="sign_up">Sign Up</string>

    <!-- Open Channel List -->
    <string name="open_channel_list_participant_count">%1$d participants</string>

    <string name="create_open_channel">Create Open Channel</string>
    <string name="participant_list">Participants</string>

    <!-- Group Channel List -->
    <string name="group_channel_list_file_message_text">%1$s has uploaded a file.</string>

    <string name="create_group_channel">Create Group Channel</string>
    <string name="member_list">Members</string>
    <string name="invite_member">Invite members</string>

    <string name="member_info"></string>

    <!-- Content descriptions -->
    <string name="open_channel_chat_content_desc_profile">Profile image</string>

    <!-- Menu actions -->
    <string name="action_create_channel">Create channel</string>

    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="upload">Upload</string>
    <string name="resend_message">Resend</string>
    <string name="delete_message">Delete</string>

    <!-- Message Status -->
    <string name="message_sending">Sending</string>
    <string name="message_failed">Failed</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="create_an_account">Create an account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">Reset password</string>

</resources>
