<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".main.SignUpActivity"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/image_signup_logo"
            android:layout_width="127dp"
            android:layout_height="127dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/logo_square"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_signup_username"
                android:inputType="textVisiblePassword"
                android:imeOptions="actionNext"
                android:hint="@string/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_signup_email"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_signup_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_signup_confirm_password"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_signup"
            android:text="@string/create_an_account"
            style="@style/Widget.AppCompat.Button.Colored"
            app:theme="@style/AppTheme.ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="10dp"
            android:stateListAnimator="@null"
            android:background="@drawable/btn_purple">
        </android.support.v7.widget.AppCompatButton>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_redirect_login"
            android:text="@string/login"
            style="@style/Widget.AppCompat.Button.Colored"
            app:theme="@style/AppTheme.ButtonStyle2"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="10dp"
            android:stateListAnimator="@null"
            android:background="@drawable/selector_btn_white">
        </android.support.v7.widget.AppCompatButton>

    </LinearLayout>

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/progress_bar_signup"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible" />

</android.support.design.widget.CoordinatorLayout>
