<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center_horizontal"
    tools:context=".main.ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_login_logo"
            android:layout_width="127dp"
            android:layout_height="127dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/logo_square" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_forgot_password_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:imeOptions="actionDone"
                android:inputType="textVisiblePassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_submit_forgot_password"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/btn_purple"
            android:stateListAnimator="@null"
            android:text="@string/reset_password"
            app:theme="@style/AppTheme.ButtonStyle"></android.support.v7.widget.AppCompatButton>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_forgot_password_redirect_login"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/selector_btn_white"
            android:stateListAnimator="@null"
            android:text="@string/login"
            app:theme="@style/AppTheme.ButtonStyle2"></android.support.v7.widget.AppCompatButton>

    </LinearLayout>

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/progress_bar_forgot_password"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible" />

</android.support.design.widget.CoordinatorLayout>
